[tool.poetry]
name = "dabtemplates"
version = "0.1.0"
description = ""
authors = ["Mr. Stradivarius <misterstrad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
wikitextparser = "^0.54.0"
pywikibot = "^8.3.3"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
